--- a/DSImager.Application/Views/MainWindow.xaml
+++ b/DSImager.Application/Views/MainWindow.xaml
@@ -74,7 +74,7 @@
                     Width="30"
                     Height="30"
 					Margin="4,0"
-					ToolTip="Save visible frame" Foreground="White">
+					ToolTip="Save visible frame as..." Foreground="White">
                     <fa:ImageAwesome Icon="Save"></fa:ImageAwesome>
                 </Button>
                 <Button FontFamily="{DynamicResource FontAwesome}"
