--- a/DSImager.Application/Views/SessionDialog.xaml
+++ b/DSImager.Application/Views/SessionDialog.xaml
@@ -11,7 +11,7 @@
         xmlns:converters="clr-namespace:DSImager.Application.Converters"
         xmlns:System="clr-namespace:System;assembly=mscorlib" x:TypeArguments="viewModels:SessionDialogViewModel" x:Class="DSImager.Application.Views.SessionDialog"
         mc:Ignorable="d"
-        Title="Start a new session" Height="440" Width="760" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
+        Title="Start a new session" Height="493" Width="760" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
         BorderBrush="Black" BorderThickness="1"
         WindowStartupLocation="CenterScreen" MinWidth="760" MinHeight="440">
     <Window.Resources>
@@ -98,7 +98,7 @@
             <ColumnDefinition Width="7*"/>
             <ColumnDefinition Width="23*"/>
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.ColumnSpan="2" Content="Stored Sessions"/>
+        <Label Grid.Row="0" Grid.ColumnSpan="2" Content="Stored Sessions" Background="#333333"/>
         <Grid Grid.Row="1" Grid.Column="0" Margin="0,10,0,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="108*"/>
@@ -157,11 +157,12 @@
         </StackPanel>
         <Grid Grid.Row="1" Grid.Column="1" Margin="10,10,10,0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="72"/>
+                <RowDefinition Height="108"/>
                 <RowDefinition Height="134*"/>
             </Grid.RowDefinitions>
             <Grid IsEnabled="{Binding SelectedSession, Converter={StaticResource NotNullConverter}}">
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="36"/>
                     <RowDefinition Height="36"/>
                     <RowDefinition Height="36"/>
                 </Grid.RowDefinitions>
@@ -185,6 +186,19 @@
                     <CheckBox Content="Pause after each repeat" HorizontalAlignment="Left" Margin="20,0,20,10"
                               IsChecked="{Binding SelectedSession.PauseAfterEachRepeat}"/>
                 </StackPanel>
+                <Grid Grid.Row="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="110"></ColumnDefinition>
+                        <ColumnDefinition Width="80*"></ColumnDefinition>
+                        <ColumnDefinition Width="20*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Column="0" Content="Output directory" 
+                           HorizontalAlignment="Left" 
+                           VerticalContentAlignment="Center"
+                           Margin="0,0,0,10"></Label>
+                    <TextBox Grid.Column="1" Margin="0,0,0,10" Text="{Binding SelectedSession.OutputDirectory, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                    <Button Grid.Column="2" Content="Browse..." Margin="5,0,0,10" Command="{Binding SelectOutputDirectoryCommand}"/>
+                    </Grid>
             </Grid>
             <Grid Grid.Row="1" IsEnabled="{Binding SelectedSession, Converter={StaticResource NotNullConverter}}">
                 <Grid.ColumnDefinitions>
@@ -199,7 +213,7 @@
                     <RowDefinition Height="96*"/>
                     <RowDefinition Height="50"/>
                 </Grid.RowDefinitions>
-                <Label Content="Imaging Sequences" Grid.ColumnSpan="5"/>
+                <Label Content="Imaging Sequences" Grid.ColumnSpan="5" Background="#333333" Margin="0,0,0,10" Foreground="White"/>
                 <ListBox Grid.Column="0" Background="#FF1E1E1E" VerticalAlignment="Stretch" Grid.Row="1" Margin="0" ItemsSource="{Binding SelectedSession.ImageSequences, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{Binding SelectedSequenceIndex}">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
